test/ruby/test_encoding.rb
@@ -109,5 +109,8 @@ class TestEncoding < Test::Unit::TestCase
     ua = "abc".force_encoding(Encoding::UTF_8)
     assert_equal(Encoding::UTF_8, Encoding.compatible?(ua, :abc))
     assert_equal(nil, Encoding.compatible?(ua, 1))
+    bin = "a".force_encoding(Encoding::ASCII_8BIT)
+    asc = "b".force_encoding(Encoding::US_ASCII)
+    assert_equal(Encoding::ASCII_8BIT, Encoding.compatible?(bin, asc))
   end
 end
